0.2.0 <unreleased>

Breaking changes:
- The syntax for logical operators is changed to &&, || and !

Bug fixes:
- No more nested call + assign steps in the output
- The numbering of assign steps is more stable and does not chnage anymore if
  a new assignment is included in an existing step