@@ -3,7 +3,8 @@
 Breaking changes:
 - The syntax for logical operators is changed to &&, || and !
 
-Bug fixes:
+Features:
+- Labeling steps manually: // @step-name: my_step_name
 - No more nested call + assign steps in the output
-- The numbering of assign steps is more stable and does not chnage anymore if
+- The numbering of assign steps is more stable and does not change anymore if
   a new assignment is included in an existing step
